# databricks-spark-app-starter

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
docs/: README.md
src/databricks_spark_app/: __init__.py  config.py  deploy.py  pipeline.py  simple_etl.py  utils.py  wordcount.py
src/databricks_spark_app/io/: __init__.py  dataframe.py  writer.py
src/databricks_spark_app/jobs/: sample_insert_overwrite.py  sample_job.py  sample_managed_table.py  sample_run_date_job.py
