[project]
name = "databricks-spark-app-starter"
version = "0.1.0"
description = "Starter kit for building and deploying Apache Spark applications on Databricks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.0",
    "databricks-connect>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["databricks_spark_app"]
